# llm-code-gen-reasoning-research

./: .gitignore  .importlinter  .semgrep.yml  CLAUDE.md  Makefile  _stdlib.py  ablation_config.yaml  analysis_prompt.txt  assembly_engine.py  call_logger.py  cases.json  cases_v2.json  cases_vskarich_test.json  condition_registry.py  config.py  constants.py  contract.py  debug_case_logs.txt  diff_gate.py  errors.txt  eval_cases.py  evaluator.py  exec_eval.py  execution.py  experiment.yaml  experiment_config.py  failure_classifier.py  leg_evaluator.py  leg_reduction.py  live_metrics.py  llm.py  llm_mock.py  main.py  parse.py  preflight_check.py  prompt_registry.py  prompt_view.py  prompts.py  pyproject.toml  pyrightconfig.json  (+14 more)
_archive/: RULES.md  SYSTEM.md
analysis/: ABLATION_RESULTS.md  ABLATION_V2_FULL_3MODEL.md  ABLATION_V2_NANO_4OMINI.md  CGE_CONTROLLED_EXPERIMENT.md  COMPATIBILITY_AUDIT.md  FORENSIC_ANALYSIS_20260323.md  LEG_diagnostics_latest_run.md  OVERALL_FINDINGS_v1.txt  PEARL_LEVEL_CASE_MAPPING.md  REGIME_ANALYSIS_20260323.md  REI_DEEP_ANALYSIS.md  RESEARCH_SUMMARY_FOR_LITERATURE_SEARCH.md  SAMPLE_CAUSAL_REASONING_SECTIONS.md
audit/: budget.json  go_no_go.json  locked_audit_set.json  phase0_case_set.json
audits/: D_BUDIT_AUDIT_v1.md  RECONSTRUCTION_WIRING_BUG_AUDIT.md  pipeline_audit_20260324.md
claude_rules/: README.md  anti_patterns.md
configs/: default.yaml  smoke_4omini_5mini_eval.yaml  smoke_5.4mini_5mini_eval.yaml  smoke_baseline_leg.yaml  smoke_vskarich_baseline_leg.yaml
deep_research_reports/: CODEBASE_FORENSIC_ANALYSIS.md  LLM_CODE_GEN_FAILURE_MITIGATION_BEST_PRAC.md  SOTA_LLM_Code_Generation_Failures_Mitigations.md
docs/: ABLATION_V2_RESULTS.md  CLAUDE_PRACTICAL_GUIDELINES_v1.md  CLAUDE_PRACTICAL_GUIDELINES_v2.md  MASTER_CASE_DOCS.md  MASTER_CASE_PEARL_MAPPING.md  RCA_THREADPOOL_HANG.md  STABILITY_AUDIT_SINGLE_TRIAL.md  codebase_audit.md  codebase_snapshot.txt  deletion_audit.md  evaluator_forensic_audit.md  forensic_execution_audit.md  phase2_assembly_engine_changes.md  practical_guardrails_plan_CLAUDE-GENERATED.md  prompt_registry_phase1_audit.md  run_diagnostics_gpt5_4_mini.md  system_design.md  violation_triage.md
logs/: STALE_mislabeled_was_nano.jsonl  alignment-fix-smoke2_20260324_023243.jsonl  alignment-fix-smoke2_20260324_023243_prompts.jsonl  alignment-fix-smoke2_20260324_023243_responses.jsonl  alignment-fix-smoke3_20260324_023358.jsonl  alignment-fix-smoke3_20260324_023358_prompts.jsonl  alignment-fix-smoke3_20260324_023358_responses.jsonl  alignment-fix-smoke_20260324_023224.jsonl  alignment-fix-smoke_20260324_023224_prompts.jsonl  alignment-fix-smoke_20260324_023224_responses.jsonl  dashboard_gpt-4.1-nano.txt  dashboard_gpt-4o-mini.txt  dashboard_gpt-5-mini.txt  dashboard_gpt-5.4-mini.txt  events.jsonl  gpt-4o-mini-alignment-trial1_20260324_012149.jsonl  gpt-4o-mini-alignment-trial1_20260324_012149_prompts.jsonl  gpt-4o-mini-alignment-trial1_20260324_012149_responses.jsonl  gpt-4o-mini-alignment-trial2_20260324_012200.jsonl  gpt-4o-mini-alignment-trial2_20260324_012200_prompts.jsonl  gpt-4o-mini-alignment-trial2_20260324_012200_responses.jsonl  gpt-4o-mini-alignment-trial3_20260324_012218.jsonl  gpt-4o-mini-alignment-trial3_20260324_012218_prompts.jsonl  gpt-4o-mini-alignment-trial3_20260324_012218_responses.jsonl  gpt-4o-mini-v3-rerun_20260324_045418.jsonl  gpt-4o-mini-v3-rerun_20260324_045418_prompts.jsonl  gpt-4o-mini-v3-rerun_20260324_045418_responses.jsonl  gpt-4o-mini-v3-rerun_20260324_045710.jsonl  gpt-4o-mini-v3-rerun_20260324_045710_prompts.jsonl  gpt-4o-mini-v3-rerun_20260324_045710_responses.jsonl  gpt-4o-mini-v3-t3_20260324_033111.jsonl  gpt-4o-mini-v3-t3_20260324_033111_prompts.jsonl  (+220 more)
nudges/: core.py  (+3 more)
(+1137 files in other folders)
