[project]
name = "t3-code-generation"
version = "0.1.0"
description = "T3 Code Generation Benchmark"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

# ============================================================
# BLACK
# ============================================================

[tool.black]
line-length = 100
target-version = ["py313"]
exclude = '''
/(
    _archive
  | \.venv
  | build
  | code_snippets_v2
)/
'''

# ============================================================
# RUFF (STRICT MODE)
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["_archive", ".venv", "build", "code_snippets_v2"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C90",
    "N",
    "SIM",
    "RET",
    "ARG",
    "PL",
    "RUF",
    "PERF",
    "TRY",
    "LOG"
]

ignore = [
    "E501" # handled by black
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 10
max-returns = 6
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = [
    "exec_eval",
    "evaluator",
    "execution",
    "runner",
    "parse",
    "llm",
    "reconstructor",
    "live_metrics"
]

# ============================================================
# MYPY (STRICT)
# ============================================================

[tool.mypy]
python_version = "3.13"

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true

exclude = [
    "_archive",
    "\\.venv",
    "build",
    "code_snippets_v2"
]

# ============================================================
# PYRIGHT (STRICTER THAN MYPY)
# ============================================================

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalSubscript = true
reportUnusedVariable = true
reportUnusedImport = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnnecessaryTypeIgnoreComment = true

# ============================================================
# PYTEST
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --strict-markers --disable-warnings"


# ============================================================
# DEV DEPENDENCIES
# ============================================================

[dependency-groups]
dev = [
    "black>=26.3.1",
    "import-linter>=2.11",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "ruff>=0.15.8",
    "vulture>=2.16",
    "semgrep>=1.70.0",
]